@@ -5,10 +5,10 @@ public class Utils {
 	public static String toDoubleDigit(int number) {
 		String result ;
 		if(number<10) {
-			result = "0%d".formatted(number) ;
+			result = String.format("0%d", number) ;
 		}
 		else {
-			result = "%d".formatted(number) ;
+			result = String.format("%d", number) ;
 		}
 		return result ;
 	}
